@@ -397,6 +397,7 @@ The full changelog is available at [changelog.txt](https://github.com/itthinx/af
 * Fixed an issue where a request for an invalid affiliate link would record a hit.
 * Added the filter affiliates_record_robot_hits and allowing the constant AFFILIATES_RECORD_ROBOT_HITS to determine whether hits from robots should be recorded.
 * Added the debugging constants AFFILIATES_DEBUG and AFFILIATES_DEBUG_ROBOTS which can be defined as true in wp-config.php to enable specific debugging.
+* Added a robot hits cleaner available under Affiliates > Settings > General > Robots that allows to clean up the hits database entries based on current robots.
 
 == Upgrade Notice ==
 
